# optistock-api

./: .gitignore  ARCHITECTURE.md  MARKETING.md  README.md  SAAS_PLAN.md  modal_app.py  optistock.db  pyproject.toml
api/: __init__.py  auth.py  billing.py  billing_routes.py  outp_curve.py  routes.py  schemas.py  storage.py  user_auth.py  user_routes.py  users.py
archive/: calculate_adjusted_demand.txt  sim2.py  simulation.py
demand/: __init__.py  adjusted_demand.py  lt_predictor.py  ml_predictor.py
scripts/: warm_numba.py
simulation/: __init__.py  day_sim.py  demand_dist.py  outp_optimizer.py  psl_optimizer.py
tests/: test_all.py  test_performance.py
webui/: app.js  checkout.html  dashboard.css  dashboard.html  dashboard.js  index.html  login.html  privacy.html  signup.html  styles.css  tos.html
