[project]
name = "optistock-api"
version = "0.1.0"
description = "Profit-maximizing inventory purchase optimization API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "numba>=0.57.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "modal>=0.60.0",
    "aiosqlite>=0.19.0",
    "polars>=0.20.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]
ml = []  # ml_regression_polars is an external dependency, not on PyPI

[project.scripts]
dev = "uvicorn modal_app:fastapi_app --reload"
deploy = "modal deploy modal_app.py"
